@@ -59,6 +59,7 @@
 * Orbital: Update alternate_ucaf_flow [almalee24] #5282
 * Adyen: Remove cryptogram flag [almalee24] #5300
 * Cecabank: Include Apple Pay and Google Pay for recurring payments [gasn150] #5295
+* DLocal: Add X-Dlocal-Payment-Source to header [almalee24] #5281
 
 == Version 1.137.0 (August 2, 2024)
 * Unlock dependency on `rexml` to allow fixing a CVE (#5181).
